Add CSV export functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -151,6 +151,10 @@
             <a href="/add" class="btn btn-add">+ Add New Job</a>
         </div>
     </div>
+    <div class="nav-buttons">
+        <a href="/add" class="btn">+ Add New Job</a>
+        <a href="/export-jobs" class="btn">Export to CSV</a>
+    </div>
 
     <!-- Search & Filters Section -->
     <div class="filters-section">
